# agile_ai_framework

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.pi/agent/: AGENTS.md  SYSTEM.md
.pi/prompts/: ceo-interview-template.md  deployment-report-template.md  prd-template.md  review-report-template.md  sprint-plan-template.md
data/: baselines.json
data/test_feedback/: S-001.jsonl
docs/: 11-summary-execution-plan.md  12-kimi-execution-plan.md  13-master-plan.md  14-master-execution-plan.md  15-implementation-report.md  16-how-to-use-this-project.md  17-self-learning-loop-plan.md  18-self-learning-loop-implementation.md  19-installation-script-plan.md  runbook.html
docs/base/: 01-executive-overview.md  02-organizational-structure.md  03-agile-development-cycle.md  04-challenges-and-solutions.md  05-comparative-analysis.md  06-industry-landscape.md  07-technical-limitations.md  08-implementation-roadmap.md  09-governance-compliance.md  10-success-metrics-and-getting-started.md
governance/: charter.md  client-disclosure.md  escalation-runbook.md
infrastructure/: Dockerfile  docker-compose.yml  entrypoint.sh
pilots/pilot-alpha/: README.md
scripts/: install.ps1  install.sh  setup.sh
src/: __init__.py
src/agents/: __init__.py  architect_agent.py  base.py  coder_agent.py  devops_agent.py  planner_agent.py  product_agent.py  reviewer_agent.py  tester_agent.py
src/api/: main.py
src/config/: providers.yaml
src/core/: feedback.py  message.py  state.py
src/graph/: sprint_graph.py
(+36 files in other folders)
